add the edit tag to post template

--- a/views/www_admin.slim
+++ b/views/www_admin.slim
@@ -1,7 +1,7 @@
-table
+table.table
 	tr
-		td posts count
+		td post count
 		td #{@posts}
 	tr
-		td comments count
+		td comment count
 		td #{@comments}
