adjust the layout

--- a/views/www_layout.slim
+++ b/views/www_layout.slim
@@ -8,7 +8,7 @@ html
 		script src="#{_assets('view/js/jquery.js')}" type="text/javascript"
 		link rel="shortcut icon" href="#{_assets(_var(:favicon, :view))}" type="image/x-icon"
 		link rel='stylesheet' type='text/css' href='#{_assets("view/css/style.css")}'
-		link rel='stylesheet' type='text/css' href="#{_assets("www/main.css")}"
+		link rel='stylesheet' type='text/css' href="#{_assets("www/layout.css")}"
 	body
 		#wrap
 
