--- a/views/www_post.slim
+++ b/views/www_post.slim
@@ -5,7 +5,8 @@
 				h2 = @post[:title]
 			p.label
 				- users = data_kv(:user_info, :uid, :name)
-				label #{users[@post[:uid]]} , #{_time(@post[:created])}
+				label By #{users[@post[:uid]]}, 
+				label updated at #{@post[:changed].strftime("%Y-%m-%d %H:%M")}
 				- if user_login? and user_info[:uid] == @post[:uid]
 					label
 						span , 
