--- a/views/www_list.slim
+++ b/views/www_list.slim
@@ -2,13 +2,11 @@
 	- @posts.each do | r |
 		.list
 			p.title
-				h3
-					a href="#{_url('/www/post/' + r[:cpid].to_s)}" target="_blank" = r[:title]
+				h3: a href="#{_url('/www/post/' + r[:cpid].to_s)}" target="_blank" = r[:title]
 
 			p.body
 				== www_cut(r[:body])
 
 - if @page_size == @posts.count and @page_number == 0
-	#more.clear : a href="" ctid="#{@tag}" = Sl[:more]
+	p#more : a href="" ctid="#{@tag}" = Sl[:more]
 
-	== _js('www/list.js')
