--- a/views/assets/main.css
+++ b/views/assets/main.css
@@ -3,6 +3,7 @@
 .contain-to-grid,
 .top-bar.expanded .title-area,
 .form .button,
+button, .button, button:hover, button:focus, .button:hover, .button:focus,
 .top-bar-section .has-dropdown a:hover,
 .top-bar-section li:not(.has-form) a:not(.button),
 .top-bar-section li.active:not(.has-form) a:not(.button),
