remove the post comment route that hasn`t been necessary

--- a/views/www_post.slim
+++ b/views/www_post.slim
@@ -21,5 +21,5 @@
 				p.body == _m2h(r[:body])
 
 	- if _var3(:www_comment_open)
-		== view_form(:www_comments, :tpl => :view_form2, :fields => [:cpid, :body], :action => '/www/comment')
+		== view_form(:www_comments, :tpl => :view_form2, :fields => [:cpid, :body])
 
